--- a/styles/style.css
+++ b/styles/style.css
@@ -20,16 +20,28 @@ ul{
   align-items: center;
   background-color: #1b1f23;
 }
+.header-menu{
+  display: none;
+}
 .header h1, .header p, .header-menu ul li a{
   color: #d8d8d8;
 }
-.header-menu ul li{
-  padding: 1em 1.5em; 
-}
-.header-menu ul li a:hover{
-  color: #FFFFFF;
-}
-#selected-menu-item{
-  background-color: #26ad60;
-  border-radius: 0.8em;
+/* Media querie for header */
+@media (min-width: 960px ){
+  .header .menu-button{
+    display: none;
+  }
+  .header-menu{
+    display: flex;
+  }
+  .header-menu ul li{
+    padding: 1em 1.5em; 
+  }
+  .header-menu ul li a:hover{
+    color: #FFFFFF;
+  }
+  #selected-menu-item{
+    background-color: #26ad60;
+    border-radius: 0.8em;
+  }
 }
