--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ ul{
   max-width: calc(100% - 2em);
 }
 .post{
-  margin-bottom: 2em;
+  margin-bottom: 3em;
 }
 .post .a-image .image-post{
   width: 100%;
@@ -94,7 +94,7 @@ ul{
 
 /* number page */
 .nav-links{
-  margin-top: 3em;
+  margin: 4em 0 3em 0;
 }
 .page-number{
   margin-right: 0.3em;
@@ -115,3 +115,15 @@ ul{
   background-color: #1b1f23;
 }
 
+/* Footer */
+.footer{
+  background-color: #1b1f23;
+  color: #d8d8d8;
+  padding: 1.5em 2em;
+}
+.footer a{
+  color: #d8d8d8;
+}
+.footer a:hover{
+  color: #26ad60;
+}
