--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,25 @@
+/*font-family: 'Roboto', sans-serif;
+font-family: 'Roboto Slab', serif;
+font-family: 'Averia Libre', cursive;*/
+/* Default typography*/
+body, title, button, input, select, textarea{
+  font-family: 'Roboto', sans-serif;
+  color: #222;
+  font-size: 1rem; 
+}
+.autor{
+  font-family: 'Averia Libre', cursive;
+  margin-block-start: 0.1em;
+  font-size: 0.85rem;
+  text-transform: capitalize;
+}
+.entry-title{
+  font-family: 'Roboto Slab', serif;
+  margin-block-end: 0;
+}
+.meta-date, .meta-author, .meta-category{
+  color: #888;
+}
 body{
   padding: 0;
   margin: 0;
@@ -14,11 +36,20 @@ ul{
   flex-direction: row;
 }
 
+
 /* header styles */
 .header{
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: #1b1f23;
+  padding: 0 2em;
+}
+.site-name{
+  font-family: 'Roboto Slab', serif;
+  font-weight: bold;
+  font-size: 1.75em;
+  line-height: 1.6;
+  margin-block-end: 0.2em;
 }
 .header-menu{
   display: none;
@@ -39,6 +70,7 @@ ul{
   }
   .header-menu ul li a:hover{
     color: #FFFFFF;
+    text-decoration-line: underline;
   }
   #selected-menu-item{
     background-color: #26ad60;
@@ -79,17 +111,36 @@ ul{
 .post{
   margin-bottom: 3em;
 }
+.entry-header a{
+  color:#222;
+}
+.entry-header a:hover{
+  color: #333399;
+}
 .post .a-image .image-post{
   width: 100%;
+  transition: transform 1s;
+}
+.image-container:hover .a-image:hover .image-post{
+  -webkit-transform:scale(1.3);
+  transform:scale(1.3);
+}
+.image-container{
+  overflow: hidden;
 }
 .entry-content p{
   margin-bottom: 2.5em;
 }
 .entry-content a {
+  text-transform: capitalize;
   padding: 1em 1.5em;
   background-color: #26ad60;
   border-radius: 0.8em;
   color: #d8d8d8;
+}
+.entry-content a:hover {
+  color:#fff;
+  background-color: #00701a;
 }
 
 /* number page */
