--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ body, title, button, input, select, textarea{
 .entry-title{
   font-family: 'Roboto Slab', serif;
   margin-block-end: 0;
+  text-transform: capitalize;
 }
 .meta-date, .meta-author, .meta-category{
   color: #888;
@@ -59,6 +60,9 @@ ul{
 }
 /* Media querie for header */
 @media (min-width: 960px ){
+  .header .site-branding{
+    padding-left: 12vw;
+  }
   .header .menu-button{
     display: none;
   }
@@ -143,6 +147,8 @@ ul{
   background-color: #00701a;
 }
 
+
+
 /* number page */
 .nav-links{
   margin: 4em 0 3em 0;
@@ -177,4 +183,52 @@ ul{
 }
 .footer a:hover{
   color: #26ad60;
+}
+
+/* post media query */
+@media (min-width: 960px ){
+  .site-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .category{
+    display: flex;
+    min-width: 900px;
+    justify-content: center;
+    align-items: center;
+  }
+  .category .title-category{
+    max-width: 200px;
+    min-width: 150px;
+  }
+  .nav-links{
+    display: inline-flex;
+    min-width: 896px;
+    justify-content: center;
+    max-width: 1068px;
+    margin: 0;
+  }
+  .post-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .post{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    min-width: 896px;
+    max-width: 1068px;
+    min-height: 250px;
+    margin-bottom: 1em;
+  }
+  .post .image-container{
+    margin-right: 1em;
+  }
+  .post .module-information{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
